force-app/main/default/objects/Course_Opportunity__c/Course_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Course Opportunity</label>
    <nameField>
        <label>Course Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>