force-app/main/default/objects/Course_Opportunity__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course__c.Instructor__c</field>
            <operation>equals</operation>
            <valueField>$Source.Instuctor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Opportunities</relationshipLabel>
    <relationshipName>Course_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>