force-app/main/default/objects/Course_Opportunity__c/fields/Expense_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Invoice_Amount__c</fullName>
    <label>Expense Invoice Amount</label>
    <summarizedField>Course_Invoice__c.Invoice_Total__c</summarizedField>
    <summaryForeignKey>Course_Invoice__c.Course_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>