force-app/main/default/objects/Course_Opportunity__c/fields/Instuctor__c.field-meta.xml
<CustomField>
    <fullName>Instuctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instuctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>